--- a/Modulo/MDB/web/2.1/signIn.html
+++ b/Modulo/MDB/web/2.1/signIn.html
@@ -12,16 +12,7 @@
         <form action="../2.2/invoice.jsp" method="post">
             <h1>Iniciar Sesión</h1>
           
-            <label for="tipoDocumento">Tipo de Documento </label>
-            <select name="tipoDocumento" id="tipoDocumento">
-                <option value="1">Cédula de ciudadanía</option>
-                <option value="2">Tarjeta de Identidad</option>
-                <option value="3">Tarjeta de Extranjería</option>
-                <option value="4">Cédula de extranjería</option>
-                <option value="5">NIT</option>
-                <option value="6">Pasaporte</option>
-            </select><br>
-            <label for="nDocumento">Número de Documento</label>
+            <label for="tipoDocumento">Codigo de empleado </label>
             <input type="text" name="nDocumento" id="nDocumento"><br>
         
             <input type="submit" name="button" id="button" value="Enviar">
